fixed typo in a word

--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
         <div class="row-fluid">
           <div class="page-error text-uppercase text-center">
             <p>error <span>404</span></p>
-            <p>Not foud</p><span class="error-desc text-justify">You may have mis-typed the URL Or the page has been removed</span>
+            <p>Not found</p><span class="error-desc text-justify">You may have mis-typed the URL Or the page has been removed</span>
           </div>
         </div>
       </div>
